--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
+        <activity android:name=".ReadActivity"/>
         <activity android:name=".AuthorisationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,8 +19,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ReadActivity">
-        </activity>
+
 
     </application>
 
